-------------------------------------------------------------------------
  xegaSelectGene                                                     News
-------------------------------------------------------------------------

Version 1.0.0.1 (2024-03-14)

- EvalGeneR:
        Message text corrected.

Version 1.0.0.2 (2024-03-15)

- () added to all function names in documentation.
  and links to all xega packages.

- ScaleFitness: 
        Documentation corrected.
- ThresholdScaleFitness:
        Documentation extended.
- ContinuousScaleFitness: 
        Documentation corrected.
- ScalingFactory: 
        Documentation completed.
- SelectGeneFactory: 
        Documentation corrected.
- SelectPropFitDiff and SelectPropFitDiffOnln:
        Epsilon added for guarantee numerical stability.

Version 1.0.0.3 (2024-08-27)

- newTSP:
       In constructed problem environment 
       functions $max() and $globalOptimum() added.
       Rationale: Compatibility with other problem environments 
                  for use in xegaEnvMeta experiments with TSPs.

Version 1.0.0.4 (2024-02-12)

- SelectTopK: Deterministic. Best (Worst) K genes.