@@ -36,3 +36,6 @@ Version 1.0.0.3 (2024-08-27)
 Version 1.0.0.4 (2024-02-12)
 
 - SelectTopK: Deterministic. Best (Worst) K genes.
+- NewlFSeclectGenes:  TopK() added for SelectTopK.
+
+
